Fix dolmens-section Body Overflow

--- a/style/scss/sections/colmenu-section.scss
+++ b/style/scss/sections/colmenu-section.scss
@@ -13,7 +13,6 @@
         .colmenu-item {
             display: block;
             height: 25vh;
-            width: 100vw;
             display: flex;
             align-items:flex-end;
 
